compiler/testData/diagnostics/tests/noValueForParameterOfLambda.diag.txt
/noValueForParameterOfLambda.kt:5:12: error: no value passed for parameter 'p2'
    lambda(1)
           ^^
/noValueForParameterOfLambda.kt:9:12: error: no value passed for parameter 's'
    lambda(1)
           ^^
/noValueForParameterOfLambda.kt:13:12: error: no value passed for parameter 'x'
    lambda(1)
           ^^
